--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     multiplataforma (Android/iOS) utilizando Flutter, conectada a un backend REST en Node.js/Express
     y con base de datos SQL Server. La aplicación permitirá gestionar familias EDI, visualizar eventos,
     compartir publicaciones, administrar perfiles y fortalecer la comunicación con estudiantes y
-    colaboradores.
+    colaboradores por medio de un chat privado familiar.
   </p>
   <p>
     El objetivo principal es digitalizar procesos actualmente manuales, reducir la carga administrativa
@@ -467,3 +467,4 @@
 
 </body>
 </html>
+
